--- a/src/components/certification/CertificationCard.css
+++ b/src/components/certification/CertificationCard.css
@@ -1,13 +1,13 @@
 .certification-card {
-    border-radius: 10px;
+    border-radius: 1vw;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin: 10px;
+    margin: 1vw;
     display: flex;
     flex-direction: column;
     transition: transform 0.3s;
     width: 100%;
-    height: 450px;
+    height: 45vh;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,7 @@
 }
 
 .certification-card img {
-    width: 140px !important;
+    width: 7.5vw !important;
     height: auto;
     margin-bottom: 1rem;
     text-align: center;
@@ -91,11 +91,30 @@
 @media (max-width: 900px) {
     .certification-card {
         max-width: 100%;
+        height: 60vh;
+        padding: 10px;
+    }
+
+    .certification-card img {
+        width: 15vw !important;
+        height: auto;
+        margin-bottom: 1rem;
+        text-align: center;
+        border-radius: 20px;
     }
 }
 
 @media (max-width: 600px) {
     .certification-card {
         max-width: 100%;
+        height: 60vh;
+    }
+
+    .certification-card img {
+        width: 25vw !important;
+        height: auto;
+        margin-bottom: 1rem;
+        text-align: center;
+        border-radius: 20px;
     }
 }
