--- a/src/containers/certifications/Certification.css
+++ b/src/containers/certifications/Certification.css
@@ -1,8 +1,8 @@
 .certifications {
-    padding: 50px 20px;
+    padding: 5vh 2vw;
 }
 
 .certifications h1 {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 3vh;
 }
